# CodeZ

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.pisci/: journal.db
crates/agentz-host/: Cargo.toml
crates/agentz-host/src/: main.rs
crates/codez-host/: Cargo.toml
crates/codez-host/src/: main.rs
docs/: agentz-design.md  codez-design.md  performance.md  tasks.md
extension-host/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
extension-host/sample-extension/: extension.js  package.json
extension-host/src/: main.ts  smoke.ts
extension-host/src/common/: dto.ts  proxyIdentifier.ts  rpcProtocol.ts
extension-host/src/host/: apiFactory.ts  converters.ts  extHostCommands.ts  extHostDebug.ts  extHostDocuments.ts  extHostLanguageFeatures.ts  extHostNotebook.ts  extHostScm.ts  extHostTasks.ts  extHostTesting.ts  extHostTreeViews.ts  extHostWebviews.ts  extHostWindow.ts  extHostWorkspace.ts  extensionService.ts  globals.d.ts  semver.ts  services.ts  stdioTransport.ts  types-impl.ts
scripts/: generate_icons.py  rename_to_agentz.py
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  monaco-setup.ts  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: context_assembly.rs  journal.rs  lib.rs  main.rs  path_filter.rs  state.rs
src-tauri/src/browser/: activity.rs  events.rs  mod.rs
src-tauri/src/commands/: agent_task.rs  agents.rs  browser.rs  chat.rs  chat_turn.rs  clawhub.rs  codebase.rs  connectors.rs  curator.rs  dap.rs  data_scope.rs  debug_scenarios.rs  edit.rs  ext_host.rs  fish.rs  flash.rs  gateway.rs  git_workspace.rs  ide.rs  interactive.rs  journal.rs  marketplace.rs  memory_consolidate.rs  memory_extract.rs  mod.rs  platform.rs  pool.rs  post_turn.rs  repo_wiki.rs  seed.rs  session.rs  session_sources.rs  settings.rs  skill_evolution.rs  skill_evolution_ctx.rs  skill_review.rs  skills_migrate.rs  system_prompt.rs  teams.rs  user_tools.rs  (+4 more)
src-tauri/src/gateway/: dingtalk.rs  discord.rs  feishu.rs  matrix.rs  mod.rs  slack.rs  teams.rs  telegram.rs  webhook.rs
src-tauri/src/lsp/: bridge.rs  mod.rs
src-tauri/src/runtime/: heartbeat.rs  journal_hooks.rs  koi.rs  mod.rs  patrol.rs  workflow.rs
src-tauri/src/skills/: loader.rs  provenance.rs  service.rs
src-tauri/src/tools/: api_connector.rs  app_control.rs  browser.rs  call_fish.rs  chat_ui.rs  chat_ui_listen.rs  chat_ui_patch.rs  chat_ui_schema.rs  codebase_search.rs  delegate.rs  mod.rs  plan_mode_ui.rs  skill_manage.rs  terminal_read.rs  web_fetch.rs
src/components/: ChatComposer.css  ChatComposer.tsx  ContextUsageRing.tsx  DropdownSelect.css  DropdownSelect.tsx  EdgeBookmarkDrawer.tsx  FileDiffCard.css  FileDiffCard.tsx  ProjectEdgePanel.css  ProjectEdgePanel.tsx  ProjectEdgeShell.tsx  TagMultiSelect.css  TagMultiSelect.tsx  TaskCard.css  TaskCard.tsx  TaskPanel.css  TaskPanel.tsx  TitleBarIcons.tsx  UserMessage.css  UserMessage.tsx  ZLogo.tsx  chatComposerUtils.ts  chatFileRefs.ts  composerChips.ts  toolDisplay.ts  useInputHistory.ts  visionUtils.ts
src/components/chat/: InteractiveCard.css  InteractiveCard.tsx
src/contexts/: ProjectEdgeContext.tsx
src/extensions/: compatStore.ts  extensionService.ts  extensionUiStore.ts  mainThreads.ts  semver.ts  transport.ts  typeConverters.ts
src/extensions/common/: protocol.ts  proxyIdentifier.ts  rpcProtocol.ts
src/extensions/debug/: breakpoints.ts  dapClient.ts  debugController.ts  debugStore.ts
src/extensions/notebook/: NotebookEditor.tsx  ipynb.ts  notebook.css
src/extensions/ui/: DebugView.tsx  ExtensionHostProvider.tsx  ExtensionPanel.tsx  MessageToasts.tsx  QuickInput.tsx  StatusBar.tsx  TreeView.tsx  WebviewHost.tsx  extensions.css  useExtensionUi.ts
src/hooks/: useAppSettings.ts  useInteractiveCards.ts
src/i18n/: en.ts  i18n.test.ts  zh.ts
src/services/: settingsRefresh.ts
src/services/tauri/: agentTask.ts  agents.ts  browser.ts  chat.ts  clawhub.ts  codebase.ts  confirm.ts  connectors.ts  edit.ts  fish.ts  gateway.ts  ide.ts  index.ts  interactive.ts  lsp.ts  marketplace.ts  pool.ts  repoWiki.ts  settings.ts  skillEvolution.ts  teams.ts  terminal.ts  userTools.ts  vsix.ts  workbench.ts  workflow.test.ts  workflow.ts  workflowExpr.test.ts  workflowExpr.ts  workspace.ts
src/utils/: composerDebug.ts  diffPreview.ts  modelPrefs.ts  pathFilter.test.ts  pathFilter.ts  perfCounters.ts
src/workspaces/agent/: Agent.css  AgentFilePreview.tsx  AgentTaskReview.css  AgentTaskReview.tsx  AgentToolPanel.css  AgentToolPanel.tsx  ArtifactsDrawer.tsx  ClawHubPanel.css  ClawHubPanel.tsx  CollabBoard.css  CollabBoard.tsx  agentArtifacts.ts  index.tsx
src/workspaces/codez/: ActivityIcons.tsx  AssistantMessageList.tsx  AssistantMessagesPanel.css  AssistantMessagesPanel.tsx  AssistantPanel.css  AssistantPanel.tsx  BottomPanel.tsx  BrowserPanel.css  BrowserPanel.tsx  CodeEditor.tsx  CompatIcon.tsx  EditorTabs.tsx  ExtensionsManager.tsx  ExtensionsPanel.css  ExtensionsPanel.tsx  FileTree.tsx  FileViewer.tsx  GitPanel.tsx  IDE.css  IdeStatusBar.tsx  ImagePreview.css  ImagePreview.tsx  InlineEdit.css  Markdown.css  Markdown.tsx  MarkdownPreview.css  MarkdownPreview.tsx  MarketplacePanel.css  MarketplacePanel.tsx  ResourceLibraryPanel.css  ResourceLibraryPanel.tsx  SearchPanel.tsx  SettingsPanel.css  SettingsPanel.tsx  Terminal.tsx  browserTab.ts  extensionStore.ts  index.tsx  themeStore.ts  types.ts  (+1 more)
src/workspaces/ide/: ActivityIcons.tsx  AssistantPanel.css  AssistantPanel.tsx  BottomPanel.tsx  BrowserPanel.css  BrowserPanel.tsx  CodeEditor.tsx  CompatIcon.tsx  EditorTabs.tsx  ExtensionsManager.tsx  ExtensionsPanel.css  ExtensionsPanel.tsx  FileIcon.tsx  FileTree.tsx  FileViewer.tsx  GitPanel.tsx  IDE.css  ImagePreview.css  ImagePreview.tsx  InlineEdit.css  Markdown.css  Markdown.tsx  (+15 more)
(+63 files in other folders)
