[workspace]
members = ["crates/agentz-host", "src-tauri"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
needless_return = "allow"
module_inception = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

# Shared agent runtime — pin rev across openpiscis, AgentZ, agent-workbench (v0.8.38).
piscis-core = { git = "https://github.com/njbinbin-piscis/piscis-engine.git", package = "piscis-core", rev = "v0.8.42" }
piscis-kernel = { git = "https://github.com/njbinbin-piscis/piscis-engine.git", package = "piscis-kernel", rev = "v0.8.42" }

# For local engine hacking, add a
# `[patch."https://github.com/njbinbin-piscis/piscis-engine.git"]` section here
# pointing piscis-core / piscis-kernel at a local `../piscis-engine` checkout.

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
