[workspace]
members = ["crates/agentz-host", "src-tauri"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
needless_return = "allow"
module_inception = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

# Shared agent runtime — pin to tagged releases on piscis-engine.
piscis-core = { git = "https://github.com/njbinbin-piscis/piscis-engine.git", package = "piscis-core", rev = "v0.8.60" }
piscis-kernel = { git = "https://github.com/njbinbin-piscis/piscis-engine.git", package = "piscis-kernel", rev = "v0.8.60" }
piscis-ide-tools = { git = "https://github.com/njbinbin-piscis/piscis-engine.git", package = "piscis-ide-tools", rev = "v0.8.60" }

# Local monorepo override — uncomment when hacking sibling checkouts:
# [patch."https://github.com/njbinbin-piscis/piscis-engine.git"]
# piscis-core = { path = "../piscis-engine/piscis-core" }
# piscis-kernel = { path = "../piscis-engine/piscis-kernel" }
# piscis-ide-tools = { path = "../piscis-engine/piscis-ide-tools" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
