[package]
name = "agentz-desktop"
version = "0.5.8"
description = "AgentZ — Cursor-like AI IDE desktop host"
authors = ["AgentZ"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"
autobins = false
default-run = "agentz-desktop"

[lib]
name = "agentz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentz-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared agent kernel (used today for process spawning; agent loop wiring lands in M1).
piscis-core = { workspace = true }
piscis-kernel = { workspace = true }
piscis-ide-tools = { workspace = true }

# RobotZ browser tool
robotz-browser = { git = "https://github.com/njbinbin-piscis/RobotZ.git", package = "robotz-browser", rev = "v0.1.4", features = ["piscis-kernel"] }

# Tauri runtime + the plugins the IDE workspace needs.
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Async runtime + helpers.
tokio = { workspace = true }
futures = "0.3"

# LSP ↔ WebSocket bridge transport.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots", "connect"], default-features = false }
tungstenite = "0.24"

# Filesystem watcher for the IDE file-change bridge.
notify = "7"

# PTY for the embedded terminal.
portable-pty = "0.8"

# Embedded Chromium driver (CDP) for the Browser panel + agent `browser` tool.
# No `fetcher`/TLS features: we drive the system-installed Chrome over a local
# ws:// CDP socket, so the auto-download fetcher (and its zip backend) is unneeded.
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# File metadata formatting + encoding detection for file reads.
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"

# .vsix (zip) ingestion for the VS Code contribution-point compat layer.
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"

# Serialization + logging.
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Match piscis-kernel — used for checkpoint restore via Database.conn.
rusqlite = { version = "0.31", features = ["bundled"] }

# ClawHub marketplace HTTP client + IM gateway HTTP calls (feishu media upload
# needs multipart form bodies).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
serde_yaml = "0.9"

# IM gateway (Phase 0A) — assistants connecting Feishu / WeCom / DingTalk /
# WeChat etc. WeChat's iLink bridge needs AES-ECB crypto + md5 + QR rendering.
aes = "0.8.4"
ecb = "0.1.2"
md5 = "0.8.0"
hex = "0.4"
getrandom = "0.2"
qrcode = "0.14"

[lints]
workspace = true
